fixed scrolling overlap
also added fun blur alpha to top bar

--- a/App/src/App.css
+++ b/App/src/App.css
@@ -1,43 +1,48 @@
 .app {
   height: 100vh;
   overflow: hidden;
+  position: relative;
 
   touch-action: pan-x;
 }
 
 .slider {
   transition: transform 0.6s ease;
+  position: relative;
+  z-index: 1;
 }
 
 .page {
   height: 100vh;
   width: 100%;
+  padding-top: 52px;
+  box-sizing: border-box;
 }
 
-/* 👇 THIS centers everything */
+
 .choice-page {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-/* 👇 actual grid container */
+
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 12px;
 
-  /* 👇 control size instead of stretching */
+  /*control size instead of stretching */
   width: 90%;
   max-width: 5000px;
 }
 
-/* 👇 portrait cards */
+
 .portrait {
   width: 100%;
-  aspect-ratio: 9 / 16; /* safe again now */
+  aspect-ratio: 9 / 16; 
   
-  background: #222;
+  background: #555555; /*#222 looks good as well maybe with another background*/
   color: white;
   display: flex;
   align-items: center;
@@ -58,12 +63,12 @@
 }
 
 /* PAGE 2 */
-.detail-page {
+.video-page {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: #111;
+  background: #222;
   color: white;
 }
 
